--- a/i18n/sv_SE.csv
+++ b/i18n/sv_SE.csv
@@ -161,3 +161,4 @@ Title,Titel
 "Remove","Ta bort"
 "Tax","Moms"
 "Shipping","Frakt"
+"Partial payment from %s / month","Delbetalning från %s / månad"
